--- a/pages/productos.html
+++ b/pages/productos.html
@@ -64,8 +64,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Alegrias', 20)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
@@ -83,8 +83,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Churros', 10)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
@@ -101,8 +101,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Galletas', 9)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
@@ -119,8 +119,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Pan', 15)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
@@ -137,8 +137,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Cereal', 2)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
@@ -155,8 +155,8 @@
                     <div class="descripcion">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                     </div>
-                    <button onclick="mayorEdad()" class="item__btn">
-                        <a href="#">Comprar</a>
+                    <button onclick="agregarAlCarrito('Dulces', 30)" class="item__btn">
+                        Comprar
                     </button>
                 </div>
 
